@@ -1,6 +1,14 @@
 Next release
 ============
 
+Bug Fixes
+---------
+
+- The routes root factory called route factories and the default route
+  factory with an environ rather than a request.  One of the symptoms
+  of this bug: applications generated using the ``bfg_zodb`` paster
+  template in 1.1a9 did not work properly.
+
 Internal
 --------
 
